# mecanum_bot

./: CMakeLists.txt  package.xml
config/: controllers.yaml  ros2_control.yaml
launch/: sim.launch.py
scripts/: cmd_vel_scaler.py  odom_tf_broadcaster.py  pose_tf_broadcaster.py  slip_monitor.py
urdf/: mecanum_bot.urdf.xacro
worlds/: mecanum_worlds.sdf  rtab_map_stage_world.sdf  rtab_map_stage_world2.sdf
